--- a/BarBot/BarBot.UWP/Pages/Menu.xaml
+++ b/BarBot/BarBot.UWP/Pages/Menu.xaml
@@ -3,8 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BarBot.UWP.Pages"
-    xmlns:uc="using:BarBot.UWP.UserControls"
     xmlns:ab="using:BarBot.UWP.UserControls.AppBar"
+    xmlns:cl="using:BarBot.UWP.UserControls.CategoryList"
+    xmlns:rl="using:BarBot.UWP.UserControls.RecipeList"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -33,7 +34,7 @@
                 </Style>
             </TextBox.Resources>
         </TextBox>-->
-        <uc:Uc_RecipeList x:Name="RecipeList" Visibility="Visible"></uc:Uc_RecipeList>
-        <uc:Uc_CategoryList x:Name="CategoryList"></uc:Uc_CategoryList>
+        <rl:Uc_RecipeList x:Name="RecipeList" Visibility="Visible"></rl:Uc_RecipeList>
+        <cl:Uc_CategoryList x:Name="CategoryList"></cl:Uc_CategoryList>
     </Grid>
 </Page>
