--- a/BarBot/BarBot.UWP/UserControls/CategoryList/Uc_CategoryList.xaml
+++ b/BarBot/BarBot.UWP/UserControls/CategoryList/Uc_CategoryList.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl
-    x:Class="BarBot.UWP.UserControls.Uc_CategoryList"
+    x:Class="BarBot.UWP.UserControls.CategoryList.Uc_CategoryList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BarBot.UWP.UserControls"
+    xmlns:local="using:BarBot.UWP.UserControls.CategoryList"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
