--- a/BarBot/BarBot.UWP/UserControls/RecipeDetail/Uc_IngredientPicker.xaml
+++ b/BarBot/BarBot.UWP/UserControls/RecipeDetail/Uc_IngredientPicker.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl
-    x:Class="BarBot.UWP.UserControls.Uc_IngredientPicker"
+    x:Class="BarBot.UWP.UserControls.RecipeDetail.Uc_IngredientPicker"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BarBot.UWP.UserControls"
+    xmlns:local="using:BarBot.UWP.UserControls.RecipeDetail"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -10,10 +10,8 @@
     Height="100">
 
     <UserControl.Resources>
-
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-
                 <ResourceDictionary Source="ms-appx:///ResourceDefinitions/Rd_Combobox.xaml"/>
                 <ResourceDictionary Source="ms-appx:///ResourceDefinitions/Rd_ComboBoxItem.xaml"/>
                 <ResourceDictionary Source="ms-appx:///ResourceDefinitions/Rd_ScrollViewer.xaml"/>
