--- a/BarBot/BarBot.UWP/UserControls/RecipeList/Uc_RecipeTile.xaml
+++ b/BarBot/BarBot.UWP/UserControls/RecipeList/Uc_RecipeTile.xaml
@@ -1,8 +1,9 @@
 ﻿<UserControl
-    x:Class="BarBot.UWP.UserControls.Uc_CategoryTile"
+    x:Class="BarBot.UWP.UserControls.RecipeList.Uc_RecipeTile"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BarBot.UWP.UserControls"
+    xmlns:local="using:BarBot.UWP.UserControls.RecipeList"
+    xmlns:uc="using:BarBot.UWP.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -12,21 +13,21 @@
     Width="260">
 
     <UserControl.Resources>
-        <local:ToUpperConverter x:Name="ToUpperConverter" />
+        <uc:ToUpperConverter x:Name="ToUpperConverter" />
     </UserControl.Resources>
 
     <Grid>
-        <Button x:Name="hexTile" Click="Category_Click">
+        <Button x:Name="hexTile" Click="Drink_Detail">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Image x:Name="HexBackground"  Stretch="Uniform" Source="ms-appx:///Assets/HexagonTile.png"/>
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <Button x:Name="imageButton" Click="Category_Click" Canvas.Top="0" Canvas.ZIndex="75">
+        <Button x:Name="imageButton" Click="Drink_Detail" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Image x:Name="categoryImage" Stretch="Uniform" Height="240" Width="240">
+                    <Image x:Name="recipeImage" Stretch="Uniform" Height="210" Width="210">
                         <Image.Source>
                             <BitmapImage UriSource="{Binding CachedImage.UriSource}"/>
                         </Image.Source>
@@ -34,17 +35,17 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <Button x:Name="hexGradient" Click="Category_Click">
+        <Button x:Name="hexGradient" Click="Drink_Detail" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Image Stretch="Uniform"  Source="ms-appx:///Assets/HexagonTileGradient.png" Width="240"/>
+                    <Image Stretch="Uniform"  Source="ms-appx:///Assets/HexagonTileGradient.png" Width="210" Height="210"/>
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <Button x:Name="textButtonWrapper" x:FieldModifier="public" Click="Category_Click" HorizontalAlignment="Center">
+        <Button x:Name="recipeName" Click="Drink_Detail" Height="240" Width="250">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <TextBlock Text="{Binding Path=Category.Name, Converter={StaticResource ToUpperConverter}}" Height="auto" MaxHeight="200" Width="auto" MaxWidth="240" TextWrapping="WrapWholeWords" FontFamily="Microsoft Yi Baiti" FontSize="50" Foreground="#FFE6E1E1" Canvas.ZIndex="99" HorizontalAlignment="Center" VerticalAlignment="Center" TextTrimming="CharacterEllipsis"></TextBlock>
+                    <TextBlock Text="{Binding Path=Recipe.Name, Converter={StaticResource ToUpperConverter}}" Height="auto" MaxHeight="200" Width="auto" MaxWidth="240" TextWrapping="WrapWholeWords" FontFamily="Microsoft Yi Baiti" FontSize="35" Foreground="White" Canvas.ZIndex="999" HorizontalAlignment="Center" VerticalAlignment="Center" TextTrimming="CharacterEllipsis"></TextBlock>
                 </ControlTemplate>
             </Button.Template>
         </Button>
