--- a/BarBot/BarBot.UWP/UserControls/RecipeList/Uc_RecipeList.xaml
+++ b/BarBot/BarBot.UWP/UserControls/RecipeList/Uc_RecipeList.xaml
@@ -23,7 +23,7 @@
         <TextBlock x:Name="NoRecipesFoundTextBlock"
                    HorizontalAlignment="Center" 
                    VerticalAlignment="Center"
-                   Text="NO RECIPES FOUND"
+                   Text="NO COCKTAILS FOUND"
                    FontFamily="Microsoft Yi Baiti"
                    FontSize="75"
                    Visibility="Collapsed" />
