#2 implemented client side recipe name search

--- a/BarBot/BarBot.UWP/UserControls/AppBar/Settings/PasswordContentDialog.xaml
+++ b/BarBot/BarBot.UWP/UserControls/AppBar/Settings/PasswordContentDialog.xaml
@@ -33,6 +33,7 @@
     
     <PasswordBox x:Name="PasswordBox"
                  PlaceholderText="Password"
+                 Header="Please log in:"
                  Width="750"
                  PasswordRevealMode="Hidden"
                  VerticalAlignment="Center"
