--- a/BarBot/BarBot.UWP/UserControls/AppBar/Search/SearchContentDialog.xaml
+++ b/BarBot/BarBot.UWP/UserControls/AppBar/Search/SearchContentDialog.xaml
@@ -32,11 +32,9 @@
     </ContentDialog.Style>
     
     <AutoSuggestBox
-                PlaceholderText="Search"
-                Width="750"
-                TextChanged="AutoSuggestBox_TextChanged"
-                QuerySubmitted="AutoSuggestBox_QuerySubmitted"
-                SuggestionChosen="AutoSuggestBox_SuggestionChosen">
+                x:Name="SearchAutoSuggestBox"
+                PlaceholderText="Search Cocktails"
+                Width="750">
         <AutoSuggestBox.Resources>
             <Style TargetType="TextBox" x:Key="AutoSuggestBoxTextBoxStyle">
                 <Setter Property="FontSize"
