--- a/BarBot/BarBot.UWP/UserControls/AppBar/Settings/PasswordContentDialog.xaml
+++ b/BarBot/BarBot.UWP/UserControls/AppBar/Settings/PasswordContentDialog.xaml
@@ -8,11 +8,9 @@
     mc:Ignorable="d"
     x:Name="ContentDialog"
     IsPrimaryButtonEnabled="True"
-    IsSecondaryButtonEnabled="True"
-    PrimaryButtonText="LOGIN"
-    SecondaryButtonText="CANCEL"
+    PrimaryButtonText="Login"
+    CloseButtonText="Cancel"
     PrimaryButtonClick="PasswordDialog_PrimaryButtonClick"
-    SecondaryButtonClick="PasswordDialog_SecondaryButtonClick"
     MaxWidth="1280"
     Background="#161616"
     Foreground="White"
@@ -22,22 +20,32 @@
         <Style TargetType="Button" x:Key="ButtonStyle">
             <Setter Property="FontSize"
                     Value="38" />
+            <Setter Property="FontFamily"
+                        Value="Microsoft Yi Baiti" />
         </Style>
     </ContentDialog.Resources>
     <ContentDialog.Style>
         <Style TargetType="ContentDialog">
             <Setter Property="PrimaryButtonStyle" Value="{StaticResource ButtonStyle}" />
-            <Setter Property="SecondaryButtonStyle" Value="{StaticResource ButtonStyle}" />
+            <Setter Property="CloseButtonStyle" Value="{StaticResource ButtonStyle}" />
         </Style>
     </ContentDialog.Style>
-    
-    <PasswordBox x:Name="PasswordBox"
+    <StackPanel>
+        <PasswordBox x:Name="PasswordBox"
                  PlaceholderText="Password"
-                 Header="Please log in:"
+                 Header="Please Log in:"
                  Width="750"
                  PasswordRevealMode="Hidden"
                  VerticalAlignment="Center"
                  HorizontalAlignment="Center"
                  FontSize="45"
+                 FontFamily="Microsoft Yi Baiti"
                  MaxLength="25" />
+        <TextBlock x:Name="ErrorTextBlock"
+                   HorizontalAlignment="Left" 
+                   FontSize="32"
+                   FontFamily="Microsoft Yi Baiti"
+                   Foreground="Red"
+                   Visibility="Collapsed" />
+    </StackPanel>
 </ContentDialog>
