#2 added blue filter icon to indicate filter applied on AppBar

--- a/BarBot/BarBot.UWP/UserControls/AppBar/AppBar.xaml
+++ b/BarBot/BarBot.UWP/UserControls/AppBar/AppBar.xaml
@@ -67,8 +67,8 @@
                 Visibility="{Binding Path=FilterButtonVisible}">
                 <Button.Template>
                     <ControlTemplate TargetType="Button">
-                        <Image Style="{StaticResource AppBarIconImageStyle}"
-                           Source="ms-appx:///Assets/filter2.png" />
+                        <Image Style="{StaticResource AppBarIconImageStyle}" 
+                               Source="{Binding FilterIconSource}" />
                     </ControlTemplate>
                 </Button.Template>
             </Button>
