#2 Implemented RecipeList Filter By Ingredient, Event logic & helper methods in App.xaml.cs

--- a/BarBot/BarBot.UWP/Pages/Menu.xaml
+++ b/BarBot/BarBot.UWP/Pages/Menu.xaml
@@ -24,7 +24,7 @@
         <ab:AppBar x:Name="AppBar" 
                    Title="Menu"
                    BackButtonVisible="False"
-                   FilterButtonVisible="True"
+                   FilterButtonVisible="False"
                    SearchButtonVisible="True"
                    SettingsButtonVisible="True"></ab:AppBar>
         <rl:Uc_RecipeList x:Name="RecipeList" Visibility="Visible"></rl:Uc_RecipeList>
